# msds_hpc_ravis

./: .gitignore  README.md
assignments/: .assignment_04.dockerfile.swo  Makefile.spack  assignment05.txt  assignment_04.dockerfile  assignment_04.sh  assignment_05.sbatch  assignment_1.md  assignments_2.md  lab_01.md  lab_01.yaml  lab_02.dockerfile  lab_03.make  spack.yaml
assignments/11/: g_book.4
assignments/13/: g_book.5
assignments/3/: g_book.1
assignments/5/: g_book.2
assignments/7/: g_book.3
classes/04_2/: build_python3_docker.sh  docker_build_multi.sh  docker_buildx.sh  docker_buildx_singularity.sh  docker_image_registries.sh  python3.dockerfile
classes/04_2/spack_containers/: spack_containerize.sh
classes/05_2/: 07_sbatch_gpu.sbatch  08_sbatch_multi-node.sbatch  09_sbatch_multi-node.sbatch  10_sbatch_dependencies.sh  11_sbatch_array_files.sbatch  mpi_get_hostnames_hybrid.c
classes/06_2/: gemm.cpp  gemm.py  numpy_bench.sbatch
classes/08_1/: CMakeLists.txt  README.md  debug_cpp.sh  debug_python.sh  gemm.cpp  gemm.py
classes/09_1/cpp/: CMakeLists.txt  mmm.cpp
classes/09_1/python/: mmm.py  view_profile.py
classes/09_2/blas_benchmark/: Makefile  README.md  (+1 more)
classes/11_1/: structure_performance.ipynb
classes/11_2/: dask_arrays.md  dask_dataframes.md  dask_delayed.md  jupyter_dask.sbatch
classes/12_1/: README.md
classes/12_2/: python_vectorization.ipynb
classes/13_2/: 00_fib.py  01_mtfib.py  02_mpfib.py  03_queues.py  04_numba.py
project/: HPC - Presentation - Final.pptx  benchmark.txt  compare_perf.py  genurlfeatures.sh  proposal.md
(+4 files in other folders)
